# filament_finder

./: .env  Cargo.toml  README.md  docker-compose.yml
migrations/: 20250311125655_init_migration.down.sql  20250311125655_init_migration.up.sql
src/db/: models.rs  queries.rs
src/db/models/: manufacturer.rs  material.rs  material_family.rs  material_properties.rs  material_unit_data.rs  materials.rs  mod.rs  printers.rs
templates/: index.html
templates/materials/: compare.html  index.html  material.html
templates/materials/finder/: index.html  materials.html
templates/static/styles/: main.css
