[package]
name = "filament_finder"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
axum = "0.8.1"
derive_builder = "0.20.2"
getset = "0.1.5"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.44.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
uuid = { version = "1.15.1", features = ["serde", "v4"] }
